--- a/React_FrontEnd/final-project/pages/profile.module.css
+++ b/React_FrontEnd/final-project/pages/profile.module.css
@@ -8,6 +8,8 @@
     justify-content: center;
     text-align: center;
     padding: 20px;
+    background-image: url("/images/pet-background-vector.jpg");
+    height: 100vh;
 }
 
 .profilePageHeader {
