--- a/React_FrontEnd/final-project/pages/profile.module.css
+++ b/React_FrontEnd/final-project/pages/profile.module.css
@@ -12,6 +12,13 @@
     height: 100vh;
 }
 
+.titleBackground {
+    background-color: rgba(255, 255, 255, 0.6);
+    padding: 10px;
+    border-radius: 8px;
+
+}
+
 .profilePageHeader {
     font-size: 2.5rem;
     margin-bottom: 20px;
